--- a/final.css
+++ b/final.css
@@ -1,14 +1,14 @@
-.button {
-  background-color: #F6F605;
-  color: black;
-  padding: 15px 32px;
-  text-align: center;
-  font-size: 16px;
-  border-radius: 12px;
-  webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  width : 175px;
-  }
+button {
+ background-color: #F6F605;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ font-size: 16px;
+ border-radius: 12px;
+ webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ width : 175px;
+}
 
 .button:hover {
   background-color: #FFFAFA; /* white */
