--- a/final.css
+++ b/final.css
@@ -1,4 +1,4 @@
-.buttona {
+.button {
  background-color: #F6F605;
  color: black;
  padding: 15px 32px;
@@ -10,17 +10,7 @@
  width : 175px;
 }
 
-.buttonb {
- background-color: #F6F605;
- color: black;
- padding: 15px 32px;
- text-align: center;
- font-size: 16px;
- border-radius: 12px;
- webkit-transition-duration: 0.4s; /* Safari */
- transition-duration: 0.4s;
- width : 175px;
-}
+
 
 .button:hover {
   background-color: #FFFAFA; /* white */
