--- a/final.css
+++ b/final.css
@@ -10,7 +10,77 @@
  width : 175px;
 }
 
+#movieparam {
+ background-color: #F6F605;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ font-size: 16px;
+ border-radius: 12px;
+ webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ width : 175px;
+}
 
+#movieparam {
+ background-color: #F6F605;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ font-size: 16px;
+ border-radius: 12px;
+ webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ width : 175px;
+}
+
+#youchooseparam {
+ background-color: #F6F605;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ font-size: 16px;
+ border-radius: 12px;
+ webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ width : 175px;
+}
+
+#foodparam {
+ background-color: #F6F605;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ font-size: 16px;
+ border-radius: 12px;
+ webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ width : 175px;
+}
+
+#activparam {
+ background-color: #F6F605;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ font-size: 16px;
+ border-radius: 12px;
+ webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ width : 175px;
+}
+
+#choose {
+ background-color: #F6F605;
+ color: black;
+ padding: 15px 32px;
+ text-align: center;
+ font-size: 16px;
+ border-radius: 12px;
+ webkit-transition-duration: 0.4s; /* Safari */
+ transition-duration: 0.4s;
+ width : 175px;
+}
 
 .button:hover {
   background-color: #FFFAFA; /* white */
