--- a/final.css
+++ b/final.css
@@ -128,3 +128,15 @@ input{
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   line-height: 2%;
 }
+#pickbutton{
+  background-color: #DBD9D9;
+  color: black;
+  padding: 5px;
+  text-align: center;
+  font-size: 16px;
+  border-radius: 12px;
+  webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  width : 175px;
+ font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
