--- a/final.css
+++ b/final.css
@@ -115,7 +115,7 @@ input{
   padding-left: : 2px;
 }
 .back{
-  color:#BAB4B4;
+  color:#05CDB9;
   text-align:center;
   font-size: 15px;
   font-weight: bolder;
