--- a/final.css
+++ b/final.css
@@ -22,6 +22,11 @@
  transition-duration: 0.4s;
  width : 175px;
 }
+#movieparam:hover {
+  background-color: #C6F9F5; /* light blue*/
+  color: black;
+}
+
 
 
 
@@ -36,6 +41,11 @@
  transition-duration: 0.4s;
  width : 175px;
 }
+#youchooseparam:hover{
+  background-color: #C6F9F5; /* light blue*/
+  color: black;
+}
+ 
 
 #foodparam {
  background-color: #DBD9D9;
@@ -48,6 +58,10 @@
  transition-duration: 0.4s;
  width : 175px;
 }
+#foodparam:hover{
+  background-color: #C6F9F5; /* light blue*/
+  color: black;
+}
 
 #activparam {
  background-color:  #DBD9D9;
@@ -59,6 +73,10 @@
  webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  width : 175px;
+}
+#activparam:hover{
+  background-color: #C6F9F5; /* light blue*/
+  color: black;
 }
 
 #choose {
