--- a/final.css
+++ b/final.css
@@ -143,13 +143,14 @@ input{
 }
 
 #sued{
-  color:black;
+  color:grey;
   text-align:center;
   font-size: 15px;
   font-weight: bold;
   background-image: url("https://s3.amazonaws.com/spoonflower/public/design_thumbnails/0308/8974/0_0_solid_FFE5E5_pale_pastel_peach_mirror.png");
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   line-height: 2%;
+  font-style: italic;
 }
 
 #pickbutton{
