--- a/final.css
+++ b/final.css
@@ -133,7 +133,7 @@ input{
   padding-left: : 2px;
 }
 .back{
-  color:#05CDB9;
+  color:#B905CD;
   text-align:center;
   font-size: 15px;
   font-weight: bolder;
