--- a/final.css
+++ b/final.css
@@ -9,6 +9,7 @@
  transition-duration: 0.4s;
  width : 175px;
  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+
 }
 
 #movieparam {
@@ -45,7 +46,7 @@
   background-color: #C6F9F5; /* light blue*/
   color: black;
 }
- 
+
 
 #foodparam {
  background-color: #DBD9D9;
@@ -133,13 +134,13 @@ input{
   padding-left: : 2px;
 }
 .back{
-  color:#B905CD;
+  color:#05CDB9;
   text-align:center;
   font-size: 15px;
   font-weight: bolder;
   background-image: url("https://s3.amazonaws.com/spoonflower/public/design_thumbnails/0308/8974/0_0_solid_FFE5E5_pale_pastel_peach_mirror.png");
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  line-height: 2%;
+  line-height: 25%;
 }
 
 #sued{
@@ -173,4 +174,37 @@ input{
 #homedescrip {
  font-style: italic;
 }
+.youShould{
 
+  line-height: 80%
+}
+
+.newChoice{
+
+  text-align:center;
+  font-size: 30px;
+  font-weight: bolder;
+  background-image: url("https://s3.amazonaws.com/spoonflower/public/design_thumbnails/0308/8974/0_0_solid_FFE5E5_pale_pastel_peach_mirror.png");
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  line-height: 25%;
+
+
+}
+.choice{
+  -webkit-animation-name: fadeIn; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s;
+  color:#06e7d0;
+}
+@keyframes fadeIn {
+  from {color: #9BFDF3 ;}
+  to {color: #06e7d0;}}
+
+
+.newChoice:hover{
+
+color:#04A494;
+}
+.back:hover{
+/* light blue*/
+  color:#04A494;
+}
