--- a/final.css
+++ b/final.css
@@ -133,7 +133,7 @@ body {
   text-align:center;
   font-size: 45px;
   font-weight: bolder;
-  background-image: url("https://s3.amazonaws.com/spoonflower/public/design_thumbnails/0308/8974/0_0_solid_FFE5E5_pale_pastel_peach_mirror.png");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTH48FT_jGsxpN3qgBfHet_XSCrgsDp5igpF0PXOP15hcsEj4EqTQ");
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 table{
