--- a/final.css
+++ b/final.css
@@ -15,6 +15,7 @@
 .button1 {
  background-color:#DBD9D9;
  color: black;
+ display: inline-block;
  padding: 15px 32px;
  text-align: center;
  font-size: 16px;
